# FishingBucket

./: .gitignore  LICENSE  README.md  config.schema.json  main.py  pyproject.toml
data/: db_next.sql  explain.md  help.md  tips.json
data/migrations/: 15.sql  16.sql  17.sql  stats.json
scripts/: download_emojis.py  generate_config_schema.py  migrate_config.py
src/: import_helper.py  interaction.py  interactions_impl.py  main.py  response.py  send_proxy.py  startup.py
src/api_server/: __init__.py  api_app.py  api_database.py  batch_edit.py  context.py  main.py  model_json_adapter.py  models.py  routing.py
src/backend/: cache.py  config.py  data_reader.py  database.py  dice_environments.py  logging.py  models.py  template_utils.py  utils.py
src/backend/import_system/: __init__.py  common.py  native.py  pluralkit.py  tupperbox.py  utter.py
src/commands/: __init__.py  bot_commands.py  command_impl.py  dice_commands.py  group_commands.py  guild_commands.py  io_commands.py  proxy_action_commands.py  proxy_commands.py  spotlight_commands.py  user_commands.py  utils.py
src/commands/generic/: __init__.py  data.py  misc.py  strategies.py
src/commands/old/: bot_commands.py  command_impl.py  dice_commands.py  group_commands.py  guild_commands.py  io_commands.py  proxy_action_commands.py  proxy_commands.py  user_commands.py  utils.py
src/extras/: down_runner.py  nothing.py  tips_service.py
src/service/: __init__.py  common.py  context.py  discord.py  enums.py  fluxer.py  server.py  setup.py
src/startup/: hook_commands.py  setup_commands.py  setup_events.py
(+11 files in other folders)
