[project]
name = "fishing-bucket"
version = "0.0.1"
description = "Fluxer proxying bot."
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fluxer-py==0.4.1",
    "typer",
    "textdistance[DamerauLevenshtein]",
    "cel-python",
    "expr_dice_roller>=0.0.6",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]
